--- a/recipes.html
+++ b/recipes.html
@@ -23,7 +23,6 @@
         </ul>
     </nav>
     <div class="clear"></div>
-
     <main id="contentMainRecipesArticle">
         <nav id="mainNav">
             <ul>
@@ -36,10 +35,21 @@
         <section id="contentArticle">
             <h2 id="articleHeader">מתכונים</h2>
             <article id="recipeAarticleStyle">
-                <p></p>
+                <p id="recipeAarticleStylePara">
+                    <span id="bold">מתכון חדש ומומלץ ביותר!</span>
+                    <span id="orange">"שאט וודקה ואבטיח" </span>ב"מתכונים לתרמומיקס". כמה פשוט ככה טעים. וגם מרענן! יש לנו גם מתכוני גולשים חדשים ומרגשים, וכולם מאוד פשוטים להכנה. תודה לכל מי ששלח לנו מתכון, המשיכו לשלוח לנו ולמלא לנו את מלאי המתכונים ואת הלב.
+                </p>
+                <section id="picRecipe">
+                    <img src="images/termomiksRecipe.jpg">
+                    <img src="images/fiencookRecipe.jpg">
+                    <img src="images/slidersRecipe.jpg">
+                </section>
+                <div class="clear"></div>
             </article>
         </section>
     </main>
+
+
 
     <aside id="contentAside">
         <section id="asideSearch">
@@ -71,7 +81,6 @@
             </ul>
         </nav>
     </aside>
-
     <footer id="contentfooterVaccum">
         <section id="footerSection">
             <section id="footerSharing">
