change5 - Vodka Watermellon's page is done

--- a/VacuumCookingMethodAarticle.html
+++ b/VacuumCookingMethodAarticle.html
@@ -58,8 +58,6 @@
         </section>
     </main>
 
-
-
     <aside id="contentAside">
         <section id="asideSearch">
             <form>
@@ -78,7 +76,7 @@
                 </nav>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
-                <li><a href="#">מתכונים</a></li>
+                <li><a href="recipes.html">מתכונים</a></li>
             </ul>
         </nav>
         <nav id="asideNavCenter">
