--- a/vodkaWatermellon.html
+++ b/vodkaWatermellon.html
@@ -2,11 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>מתכונים</title>
+    <title>שאט וודקה אבטיח</title>
     <link rel="stylesheet" href="includes/style.css">
 </head>
 <body>
-<div id="recipesWrapper">
+<div id="vodkaWatermellonWrapper">
     <header>
         <a href="index.html" id="logo"></a>
     </header>
@@ -27,49 +27,87 @@
         <nav id="mainNav">
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
-                <li><img src="images/orangeArrow1.png" id="brownArrowImg"></li>
-                <li><a href="content.html" class="orangeRecipesLogo">מתכונים</a></li>
+                <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
+                <li><a href="content.html">מתכונים</a></li>
+                <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
+                <li><a href="vodkaWatermellon.html" class="orangeRecipesLogo">שאט וודקה אבטיח</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
         <section id="contentArticle">
+
             <h2 id="articleHeader">מתכונים</h2>
-            <article id="recipeAarticleStyle">
-                <p id="recipeAarticleStylePara">
-                    <span id="bold">מתכון חדש ומומלץ ביותר!</span>
-                    <span><a href="vodkaWatermellon.html" class="orange">"שאט וודקה ואבטיח" </a></span>ב"מתכונים לתרמומיקס". כמה פשוט ככה טעים. וגם מרענן! יש לנו גם מתכוני גולשים חדשים ומרגשים, וכולם מאוד פשוטים להכנה. תודה לכל מי ששלח לנו מתכון, המשיכו לשלוח לנו ולמלא לנו את מלאי המתכונים ואת הלב.
-                </p>
-                <section id="picRecipe">
-                    <img src="images/termomiksRecipe.jpg">
-                    <img src="images/fiencookRecipe.jpg">
-                    <img src="images/slidersRecipe.jpg">
+            <article id="vodkaWMAarticleStyle">
+
+                <h1>שאט וודקה ואבטיח</h1>
+                <img src="images/vodkaWatermellon.jpg" id="vodkaWatermellonImg">
+                <p id="vodkaWMAarticleStylePara">שאט וודקה אבטיח הוא משקה מושלם לערב שרבי. הוודקה תתן לכם את מלוא כובד האלהוכהול, והאבטיח עם המנטה את הקלילות של הקיץ. לחיים!</p>
+
+                <section id="vodkaWMAarticleStyleRecipes">
+                    <p>החומרים</p>
+                    <p> 100 גרם סוכר</p>
+                    <p>600 גרם אבטיח חתוך לקוביות קפואות</p>
+                    <p>100 גרם מיץ לימון</p>
+                    <p>100 גרם מים</p>
+                    <p>330 גרם וודקה</p>
                 </section>
-                <div class="clear"></div>
-                <section id="h3recipetitle">
-                    <h3 class="h3RecipeTitle">מתכונים לתרמומיקס</h3>
-                    <h3 class="h3RecipeTitle">מתכונים לפיין-קוקר</h3>
-                    <h3 class="h3RecipeTitle">מתכוני גולשים</h3>
+
+                <section id="vodkaWMAarticleStylePreparation">
+                    <p>אופן ההכנה</p>
+                    <p>1. שוקלים את הסוכר ישירות לקערת התרמומיקס וטוחנים 10 שניות במהירות 10</p>
+                    <p>2. מוסיפים את קוביות האבטיח הקפואות וקוצצים 30 שניות במהירות 10</p>
+                    <p>3. מוסיפים את מיץ הלימון, המים והוודקה ומערבבים 30 שניות במהירות 6</p>
+                    <p>4. שומרים בקירור!</p>
                 </section>
-                <div class="clear"></div>
+
+                <section id="picsSlider">
+                    <ul>
+                        <li>2/6 דפדפו בין התמונות</li>
+                        <li><img src="images/rightBrownArrow.jpg"></li>
+                        <li><img src="images/leftBrownArrow.jpg"></li>
+                    </ul>
+                    <img src="images/picsSlider.jpg" id="picsSliderBigImg">
+                    <p>הצעת הגשה: מעל עלים טריים.</p>
+                </section>
             </article>
+            <section id="sendRecipes">
+                <p>שלח לנו מתכון!</p>
+                <ul>
+                    <li>הדפסה</li>
+                    <img src="images/orangeArrowRight.png">
+                    <li>הקודם</li>
+                    <li>הבא</li>
+                    <img src="images/orangeArrow.png">
+                </ul>
+            </section>
+            <div class="clear"></div>
         </section>
     </main>
 
-    <aside id="recipeAside">
+    <aside id="vodkaWatermellonaside">
         <section id="asideSearch">
             <form>
                 <input type="search" id="search" placeholder="חפש" />
             </form>
         </section>
-        <nav id="asideNavTopContentRecipe">
+        <nav id="asideNavTopContentvodkaWatermellon">
             <ul>
-                <li>מאמרי מערכת</li>
+                <li><a href="content.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html" class="orange">מתכונים</a></li>
             </ul>
             <ul id="ulLastChild">
-                <li>מתכונים לתרמומיקס</li>
+                <li class="orange">מתכונים לתרמומיקס</li>
+                <ul>
+                    <li>אורז מלא בלימון ועשבי תיבול</li>
+                    <li><a href="vodkaWatermellon.html" class="orange">שאט של וודקה אבטיח</a></li>
+                    <li>קפה קר ללא לקטוז</li>
+                    <li>דואט קנולי</li>
+                    <li>גלילי ביסקוויט שוקולוד</li>
+                    <li>בצק שמרים ללא גלוטן</li>
+                    <li>חזה עוף במרינדה</li>
+                </ul>
                 <li>מתכונים לפיין-קוקר</li>
                 <li>מתכוני גולשים</li>
             </ul>
@@ -90,7 +128,7 @@
             </ul>
         </nav>
     </aside>
-    <footer id="contentfooterRecipes">
+    <footer id="contentfooterVodkaWatermellon">
         <section id="footerSection">
             <section id="footerSharing">
                 <img src="images/facebooklogo.png" class="footerSharingImg paddingleft" >
