--- a/content.html
+++ b/content.html
@@ -10,6 +10,7 @@
     <header>
         <a href="index.html" id="logo"></a>
     </header>
+
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
@@ -23,6 +24,7 @@
         </ul>
     </nav>
     <div class="clear"></div>
+
     <main id="contentMain">
         <nav id="mainNav">
             <ul>
@@ -61,8 +63,6 @@
         </section>
     </main>
 
-
-
     <aside id="contentAside">
         <section id="asideSearch">
             <form>
@@ -81,7 +81,7 @@
                 </nav>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
-                <li><a href="#">מתכונים</a></li>
+                <li><a href="recipes.html">מתכונים</a></li>
             </ul>
         </nav>
         <nav id="asideNavCenter">
