change6.1 - fixing index page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
             <p>זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</p>
         </section>
         <section id="slideshow">
-            <img src="images/slideshow.jpg">
+            <section id="slideshowinner">
+
+                <section id="slideshowimg"><img src="images/slideshowimg.jpg"></section>
+                <section id="slideshowtext">
+                    <h1 id="h1slideshow">פתרונות חכמים למטבח המודרני</h1>
+                    <p>אנחנו ב-FEIN COOK מאתרים מכונות מזון וציוד עזר למטבח הביתי והמקצועי מרחבי העולם. בוחרים את המכשירים המתקדמים בעולם באיכותם הגבוהה ובחדשנותם אשר משפרים את המקצוענות, מייעלים תהליכי עבודה וחוסכים זמן וכסף, תוך שאנחנו שמים דגש על האיכות הקולינרית של המנות.</p>
+                </section>
+                <div class="clear"></div>
+            </section>
         </section>
         <section id="bigArticle">
             <article id="whatsnew">
