--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -18,7 +18,7 @@
             <li class="navBorder"><a href="#">כתבו עלינו</a></li>
             <li class="navBorder"><a href="#">בלוג</a></li>
             <li class="navBorder"><a href="#">פורום</a></li>
-            <li class="navBorder"><a href="#">בית פין קוק</a></li>
+            <li class="navBorder"><a href="fiencookHouse.html">בית פין קוק</a></li>
             <li class="navBorder"><a href="#">יאיר פיינברג</a></li>
             <li class="navBorder"><a href="index.html">עמוד הבית</a></li>
         </ul>
@@ -30,7 +30,7 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
-                <li class="mainNavLastLi"><a href="content.html">בית פיין קוק</a></li>
+                <li class="mainNavLastLi"><a href="fiencookHouse.html">בית פיין קוק</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
@@ -75,21 +75,21 @@
                 <li><a href="content.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
-                <li><a href="#">מתכונים</a></li>
+                <li><a href="recipes.html">מתכונים</a></li>
             </ul>
         </nav>
         <nav id="asideNavCenter">
             <ul>
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
-                <li class="asideNavCentedot"><a href="#">התרמומיקס</a></li>
-                <li class="asideNavCentedot"><a href="#">בישול בואקום</a></li>
+                <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
+                <li class="asideNavCentedot"><a href="VacuumCookingMethodAarticle.html">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
         </nav>
         <nav id="asideNavBottom">
             <ul>
                 <li id="asideNavBottom1"><a href="#">לפורום שלנו</a></li>
-                <li id="asideNavBottom2"><a href="#">מתכונים</a></li>
+                <li id="asideNavBottom2"><a href="recipes.html">מתכונים</a></li>
                 <li id="asideNavBottom3"><a href="#">צור עמנו קשר!</a></li>
             </ul>
         </nav>
