--- a/content.html
+++ b/content.html
@@ -74,9 +74,9 @@
                 <li id="greenFontTitle">מאמרי מערכת</li>
                 <nav id="asideNavCenter1">
                     <ul>
-                        <li class="asideNavCentedot1">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</li>
-                        <li class="asideNavCentedot1">כותרת המאמר השני ובו כותרת שתי שורות</li>
-                        <li class="asideNavCentedot1">שם המאמר השלישי</li>
+                        <li class="asideNavCentedot1"><a href="VacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
+                        <li class="asideNavCentedot1"><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
+                        <li class="asideNavCentedot1"><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
                 </nav>
                 <li><a href="#">סדנאות ואירועים</a></li>
