--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="#">כתבו עלינו</a></li>
             <li><a href="#">בלוג</a></li>
             <li><a href="#">פורום</a></li>
-            <li><a href="#">בית פין קוק</a></li>
+            <li><a href="fiencookHouse.html">בית פין קוק</a></li>
             <li><a href="#">יאיר פיינברג</a></li>
             <li><a href="index.html">עמוד הבית</a></li>
         </ul>
