change8 - form is done and also hovers

--- a/VacuumCookingMethodAarticle.html
+++ b/VacuumCookingMethodAarticle.html
@@ -13,11 +13,11 @@
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
-            <li><a href="#">צרו קשר</a></li>
+            <li><a href="conatctForm.html">צרו קשר</a></li>
             <li><a href="#">כתבו עלינו</a></li>
             <li><a href="#">בלוג</a></li>
             <li><a href="#">פורום</a></li>
-            <li><a href="#">בית פין קוק</a></li>
+            <li><a href="fiencookHouse.html">בית פין קוק</a></li>
             <li><a href="#">יאיר פיינברג</a></li>
             <li><a href="index.html">עמוד הבית</a></li>
         </ul>
@@ -27,7 +27,7 @@
         <nav id="mainNav">
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
-                <li><img src="images/brownArrow.png" id="brownArrowImg"></li>
+                <li><img src="images/brownArrow.png" class="brownArrowImg"></li>
                 <li><a href="content.html">מאמרי מערכת</a></li>
                 <li><img src="images/greenArrow1.png" id="greenArrowImg"></li>
                 <li class="mainNavLastLiNotBold"><a href="VacuumCookingMethodAarticle.html">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a> </li>
@@ -69,9 +69,9 @@
                 <li id="greenFontTitle">מאמרי מערכת</li>
                 <nav id="asideNavCenter1">
                     <ul>
-                        <li id="currentArticleGreen">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</li>
-                        <li>כותרת המאמר השני ובו כותרת שתי שורות</li>
-                        <li>שם המאמר השלישי</li>
+                        <li class="currentArticleGreen"><a href="VacuumCookingMethodAarticle.html"> שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</a></li>
+                        <li><a href="#"> כותרת המאמר השני ובו כותרת שתי שורות</a></li>
+                        <li><a href="#"> שם המאמר השלישי</a></li>
                     </ul>
                 </nav>
                 <li><a href="#">סדנאות ואירועים</a></li>
