--- a/conatctForm.html
+++ b/conatctForm.html
@@ -13,11 +13,11 @@
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
-            <li><a href="#">צרו קשר</a></li>
+            <li><a href="conatctForm.html" id="orangeLi">צרו קשר</a></li>
             <li><a href="#">כתבו עלינו</a></li>
             <li><a href="#">בלוג</a></li>
             <li><a href="#">פורום</a></li>
-            <li><a href="#">בית פין קוק</a></li>
+            <li><a href="fiencookHouse.html">בית פין קוק</a></li>
             <li><a href="#">יאיר פיינברג</a></li>
             <li><a href="index.html">עמוד הבית</a></li>
         </ul>
@@ -28,24 +28,24 @@
             <ul>
                 <li><a href="index.html">עמוד הבית</a></li>
                 <li><img src="images/yellowArrow.jpg" id="brownArrowImg"></li>
-                <li><a href="content.html" class="mainNavLastLiConatct">צור קשר</a></li>
+                <li><a href="content.html">צור קשר</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
         <section id="conatactFormAarticleStyle">
             <h2 id="articleHeader">צור קשר</h2>
-            <article id="contactFormAarticleStyle">
+            <section id="contactFormAarticleStyle">
                 <h2>שלחו לנו מייל</h2>
                     <form>
-                        <label>שם פרטי ומשפחה*</label><input type="text">
-                        <label>טלפון</label><input type="text">
-                        <label>כתובת אי-מייל*</label><input type="text">
-                        <label>נושא ההודעה</label><input type="text">
-                        <label>ההודעה*</label><input type="text">
-                        <label><input type="checkbox"></label>
-                        <label><input type="submit" value="שלח"></label>
+                        <p>שם פרטי ומשפחה*</p><input type="text" class="formField">
+                        <p>טלפון</p><input type="text" class="formField">
+                        <p>כתובת אי-מייל*</p><input type="text" class="formField">
+                        <p>נושא ההודעה</p><input type="text" class="formField">
+                        <p>ההודעה*</p><input type="text" id="formMsgField">
+                        <img src="images/CBfield.png" id="CKstyle"><p>שלחו "ניוזלטר פיין קוק" למייל שלי</p>
+                        <input type="submit" value="שלח"  id="submitForm">
                     </form>
-            </article>
+            </section>
         </section>
     </main>
 
@@ -75,7 +75,7 @@
             <ul>
                 <li id="asideNavBottom1"><a href="#">לפורום שלנו</a></li>
                 <li id="asideNavBottom2"><a href="recipes.html">מתכונים</a></li>
-                <li id="asideNavBottom3"><a href="#">צור עמנו קשר!</a></li>
+                <li id="asideNavBottom3"><a href="conatctForm.html">צור עמנו קשר!</a></li>
             </ul>
         </nav>
     </aside>
