--- a/content.html
+++ b/content.html
@@ -35,7 +35,7 @@
         </nav>
         <div class="clear"></div>
         <section id="contentArticle">
-            <p id="articleHeader">מאמרי מערכת</p>
+            <h2 id="articleHeader">מאמרי מערכת</h2>
             <article id="articleContentStyle1">
                 <img id="articleContentStyle1Img" class="contentPicture" src="images/systemArticlePic1.jpg">
                 <p>שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p>
