--- a/fiencookHouse.html
+++ b/fiencookHouse.html
@@ -90,7 +90,7 @@
             <ul>
                 <li id="asideNavBottom1"><a href="#">לפורום שלנו</a></li>
                 <li id="asideNavBottom2"><a href="recipes.html">מתכונים</a></li>
-                <li id="asideNavBottom3"><a href="#">צור עמנו קשר!</a></li>
+                <li id="asideNavBottom3"><a href="conatctForm.html">צור עמנו קשר!</a></li>
             </ul>
         </nav>
     </aside>
