--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
-            <li><a href="#">צרו קשר</a></li>
+            <li><a href="conatctForm.html">צרו קשר</a></li>
             <li><a href="#">כתבו עלינו</a></li>
             <li><a href="#">בלוג</a></li>
             <li><a href="#">פורום</a></li>
@@ -24,9 +24,7 @@
     </nav>
     <div class="clear"></div>
     <main>
-        <section id="tickerText">
-            <p>זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</p>
-        </section>
+          <marquee id="tickerText">זה טקסט הטיקר. הטיקר מופיע      כאן בעמוד הבית בלבד, ויש בו תוכן אודות חידושים, אירועים</marquee>
         <section id="slideshow">
             <section id="slideshowinner">
 
@@ -52,7 +50,7 @@
                 <p class="articleCotert">בצק עלים זריז</p>
                 <p class="articleDate">8 בנובמבר 2010</p>
                 <p class="articleText">בצק עלים חמאתי וקל להכנה. לשימוש מיידי או להקפאה ושימוש חוזר כעבור חודש.</p>
-                <p class="articleLink">למתכון המלא <img class="arrow" src="images/orangeArrow.png"></p>
+                <p class="articleLink"><a href="#"> למתכון המלא </a><img class="arrow" src="images/orangeArrow.png"></p>
             </article>
             <h3 class="h3contentWorld">מאמרי מערכת</h3>
             <article class="systemArticle">
@@ -60,7 +58,7 @@
                 <p class="systemArticleCotert">שיטת הבישול בואקום הולכת ותופסת מקום מרכזי בעולם הבישול</p>
                 <p class="systemArticleDate">27 באוקטובר 2010</p>
                 <p class="systemArticleText">טקסט התוכן של המאמר הראשון. בטקסט המקוצר המופיע בעמוד הבית יוצגו תמיד ארבעת השורות...</p>
-                <p class="articleLink">למאמר המלא <img class="arrow" src="images/greenArrow.png"></p>
+                <p class="articleLink al1"><a href="#"> למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
 
             </article>
             <article class="systemArticle">
@@ -68,7 +66,7 @@
                 <p class="systemArticleCotert">הכותרת של המאמר השני</p>
                 <p class="systemArticleDate">15 בינואר 2010</p>
                 <p class="systemArticleText">טקסט התוכן של המאמר השני. גם כאן מוצגות רק ארבעת השורות הראשונות של המאמר והתוכן ייקטע...</p>
-                <p class="articleLink">למאמר המלא <img class="arrow" src="images/greenArrow.png"></p>
+                <p class="articleLink al1"><a href="#">למאמר המלא </a><img class="arrow" src="images/greenArrow.png"></p>
             </article>
             <section id="endArticle"></section>
         </section>
@@ -100,22 +98,22 @@
                 <li><a href="content.html">מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
-                <li><a href="#">מתכונים</a></li>
+                <li><a href="recipes.html">מתכונים</a></li>
             </ul>
         </nav>
         <nav id="asideNavCenter">
             <ul>
                 <li id="asideNavCenterTitle">עולמות תוכן</li>
-                <li class="asideNavCentedot"><a href="#">התרמומיקס</a></li>
-                <li class="asideNavCentedot"><a href="#">בישול בואקום</a></li>
+                <li class="asideNavCentedot"><a href="vodkaWatermellon.html">התרמומיקס</a></li>
+                <li class="asideNavCentedot"><a href="VacuumCookingMethodAarticle.html">בישול בואקום</a></li>
                 <li class="asideNavCentedot"><a href="#">פאקו-ג'ט</a></li>
             </ul>
         </nav>
         <nav id="asideNavBottom">
             <ul>
                 <li id="asideNavBottom1"><a href="#">לפורום שלנו</a></li>
-                <li id="asideNavBottom2"><a href="#">מתכונים</a></li>
-                <li id="asideNavBottom3"><a href="#">צור עמנו קשר!</a></li>
+                <li id="asideNavBottom2"><a href="recipes.html">מתכונים</a></li>
+                <li id="asideNavBottom3"><a href="conatctForm.html">צור עמנו קשר!</a></li>
             </ul>
         </nav>
         <section id="asideContact">
