--- a/recipes.html
+++ b/recipes.html
@@ -13,11 +13,11 @@
     <nav id="topNav">
         <ul>
             <li><a href="#">שאלות ותשובות</a></li>
-            <li><a href="#">צרו קשר</a></li>
+            <li><a href="conatctForm.html">צרו קשר</a></li>
             <li><a href="#">כתבו עלינו</a></li>
             <li><a href="#">בלוג</a></li>
             <li><a href="#">פורום</a></li>
-            <li><a href="#">בית פין קוק</a></li>
+            <li><a href="fiencookHouse.html">בית פין קוק</a></li>
             <li><a href="#">יאיר פיינברג</a></li>
             <li><a href="index.html">עמוד הבית</a></li>
         </ul>
@@ -26,9 +26,9 @@
     <main id="contentMainRecipesArticle">
         <nav id="mainNav">
             <ul>
-                <li><a href="index.html">עמוד הבית</a></li>
-                <li><img src="images/orangeArrow1.png" id="brownArrowImg"></li>
-                <li><a href="content.html" class="orangeRecipesLogo">מתכונים</a></li>
+                <li id="orangeHover"><a href="index.html">עמוד הבית</a></li>
+                <li><img src="images/orangeArrow1.png" class="brownArrowImg"></li>
+                <li><a href="recipes.html" class="orangeRecipesLogo">מתכונים</a></li>
             </ul>
         </nav>
         <div class="clear"></div>
@@ -63,7 +63,7 @@
         </section>
         <nav id="asideNavTopContentRecipe">
             <ul>
-                <li>מאמרי מערכת</li>
+                <li><a href="content.html"> מאמרי מערכת</a></li>
                 <li><a href="#">סדנאות ואירועים</a></li>
                 <li><a href="#">מוצרים</a></li>
                 <li><a href="recipes.html" class="orange">מתכונים</a></li>
